# rier

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: cube.rs  event.rs  model.rs  sprite.rs  triangle.rs
sprite/: Cargo.toml
sprite/examples/: sprite.rs
sprite/src/: graphics.rs  lib.rs  object.rs  sprite.frag  sprite.vert
src/: camera.rs  context.rs  event.rs  event_loop.rs  id.rs  lib.rs  loader.rs  main_loop.rs  mesh.rs  rect.rs  render.rs  texture.rs  transform.rs  utils.rs
src/sprite/: graphics.rs  mod.rs  object.rs  sprite.frag  sprite.vert
