[package]

name = "sprite"
version = "0.0.1"
authors = ["tioover <tioover@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tioover/rier.git"
description = "Rier library sprite module."


[lib]
name = "sprite"
path = "src/lib.rs"

[dependencies]
glium = "*"
[dependencies.rier]
path = "../"
